--- a/src/modulo-03-html-css/index.html
+++ b/src/modulo-03-html-css/index.html
@@ -1,18 +1,18 @@
 <html>
   <head>
-    <title> Título da página</title>
+    <title> Página Inicial</title>
     <meta charset='utf-8'>
     <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
-    <div id="menu">
-        <ul><li>Inicio</li><li>Noticias</li><li>Ficha Técnica</li><li>Sobre</li></ul>
+    <div class="menu">
+        <ul><li><a href="index.html">Inicio</a></li><li><a href="https://www.google.com.br/#q=street+fighter&tbm=nws">Noticias</a></li><li><a href="ficha-tecnica.html">Ficha Técnica</a></li><li><a href="sobre.html">Sobre</a></li></ul>
     </div>
-    <div>
-      <h1>Street Fighter</h1>
-    </div>
-    <div id="conteudo">
-      <hr> <!-- linha -->
+    <div class="titulo">
+      <h2>Street Fighter</h2>
+	</div>
+	<div class="conteudo">
+      
       <h2>Sumário</h2>
       <ul>
         <li><a href="#jogo">O jogo</a></li>
