refactor(street-fighter): remover duplicidade de código e modificar nomes de seletores.

--- a/src/modulo-03-html-css/index.html
+++ b/src/modulo-03-html-css/index.html
@@ -5,24 +5,25 @@
     <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
-    <div class="menu">
+    <nav class="menu">
         <ul><li><a href="index.html">Inicio</a></li><li><a href="https://www.google.com.br/#q=street+fighter&tbm=nws">Noticias</a></li><li><a href="ficha-tecnica.html">Ficha Técnica</a></li><li><a href="sobre.html">Sobre</a></li></ul>
-    </div>
-    <div class="titulo">
+    </nav>
+    <header class="titulo">
       <h2>Street Fighter</h2>
-	</div>
-	<div class="conteudo">
-      
+	</header>
+	<article class="conteudo">
+    <nav>
       <h2>Sumário</h2>
       <ul>
         <li><a href="#jogo">O jogo</a></li>
         <li><a href="#historia">História</a></li>
-        <li><a href="#jogosSerie">Jogos da série</a></li>
-        <li><a href="#streetFighter">Street Fighter</a></li>
-        <li><a href="#streetFighterII">Street Fighter II</a></li>
-        <li><a href="#streetFighterIII">Street Fighter III</a></li>
+        <li><a href="#jogos-serie">Jogos da série</a></li>
+        <li><a href="#street-fighter">Street Fighter</a></li>
+        <li><a href="#street-fighterII">Street Fighter II</a></li>
+        <li><a href="#street-fighterIII">Street Fighter III</a></li>
         <li><a href="#alpha">Street Fighter Alpha</a></li>
       </ul>
+    </nav>
       <hr>
       <h2 id="jogo">O jogo</h2>
       <p>
@@ -40,21 +41,21 @@
         Assim nasceu Street Fighter
       </p>
       <hr>
-      <h2 id="jogosSerie">Jogos da série</h2>
+      <h2 id="jogos-serie">Jogos da série</h2>
 
-      <h3 id="streetFighter">Street Fighter</h3>
+      <h3 id="street-fighter">Street Fighter</h3>
 
       <p>
         Street Fighter fez pouco impacto em seu lançamento. Porém seus controles eram inovadores, com 1 joystick e 2 botões hidráulicos, que dependendo da força davam potência diferente ao golpe. Como geralmente se batia com muita força, foram trocados pelos 6 botões que se tornaram tradição na série. O     game acompanhava Ryu ou Ken , duelando com dez lutadores de 5 países. O game introduziu os golpes especiais da Punho Ondulante, que ficariam com Ryu e Ken pelo resto da série. Sagat, ainda sem a cicatriz no peito, é o chefe final do jogo. Os demais personagens são Eagle, Lee, Joe, Gen, Geki, Retsu,     Adon, Mike e Birdie.
       </p>
-      <h3 id="streetFighterII">Street Fighter II</h2>
+      <h3 id="street-fighterII">Street Fighter II</h2>
 
       <p>
         Inicialmente lançado como Street Fighter II: The World Warrior em 1991, SF II tornou-se um grande sucesso, popularizando o estilo de jogos de luta,que virou febre mundial nos Arcades.
 
         O jogo também inovou a forçar o protagonista viajar por diferentes países através de cenários locais, como os elefantes na fase do Dhalsim, elementos japoneses nos estágios de E. Honda e Ryu (mostrando cenários tipicamente orientais) e inclusive a selva amazônica brasileira na fase relativa ao     Blanka.
       </p>
-      <h3 id="streetFighterIII">Street Fighter III</h2>
+      <h3 id="street-fighterIII">Street Fighter III</h2>
       <p>
         Street Fighter III fora lançado em 1997. Não teve tanto sucesso quanto o II. Um dos motivos atribuídos foi pelo advento de jogos de luta em 3D como Tekken, e a ausência de muitos personagens famosos do jogo anterior.
       </p>
@@ -63,6 +64,6 @@
       <p>
         Street Fighter Alpha é uma subsérie, com três games e uma compilação por hora.
       </p>
-  </div>
+  </article>
   </body>
 </html>
