--- a/src/modulo-03-html-css/ficha-tecnica.html
+++ b/src/modulo-03-html-css/ficha-tecnica.html
@@ -5,13 +5,13 @@
 		<link rel="stylesheet" href="estilo.css" />
 	</head>
 	<body>
-		<div class="menu">
+		<nav class="menu">
 			<ul><li><a href="index.html">Inicio</a></li><li><a href="https://www.google.com.br/#q=street+fighter&tbm=nws">Noticias</a></li><li><a href="ficha-tecnica.html">Ficha Técnica</a></li><li><a href="sobre.html">Sobre</a></li></ul>
-		</div>
-		<div class="titulo">
+		</nav>
+		<header class="titulo">
 			<h2>Ficha Técnica</h2>
-		</div>
-		<div class="conteudo">
+		</header>
+		<article class="conteudo">
 			<h1 color="black"> Blanka</h1>
 			<img src="http://www.streetfighter.com.br/upload/editor/20120823194105_127.png" alt="Personagem Blanka">
 			<p><font style='font-weight:bold;'>Primeira aparição</font>: Street Fighter II The World Warrior (1991) <br>
@@ -32,6 +32,6 @@
 				<font style='font-weight:bold;'>SFA3 stage</font>: Ramificação do Rio Madeira - pantano, Brasil (ramificação do rio Madeira: talvez possa ser Mato Grosso, ou Tocantins?). <br>
 				<font style='font-weight:bold;'>SF2 stage</font>: Bacia do rio Amazonas (Brasil). <br>
 				<font style='font-weight:bold;'>Golpes especiais famosos</font>: Electric Thunder, Rolling Attack. </p>
-		</div>
+		</article>
 	</body>
 </html>
