--- a/src/modulo-04-javascript/Lista1/lista-js-basico.html
+++ b/src/modulo-04-javascript/Lista1/lista-js-basico.html
@@ -4,6 +4,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script type="text/javascript" src="lista1script.js"></script>
+  <script type="text/javascript" src="lista-js-basico.js"></script>
 </body>
 </html>
