--- a/src/modulo-04-javascript/dia04/index.html
+++ b/src/modulo-04-javascript/dia04/index.html
@@ -8,9 +8,9 @@
   <body>
     <form id="frmNovoCavaleiro" method="POST">
       <label for="txtNomeCavaleiro">Nome</label>
-      <input id="txtNomeCavaleiro" type="text" name="nome" placeholder="Ex: Shiryu">
+      <input id="txtNomeCavaleiro" type="text" name="nome" placeholder="Ex: Shiryu"><br>
       <label for="slTipoSanguineo">Tipo Sanguíneo</label>
-      <select id="slTipoSanguineo" name="tipoSanguineo">
+      <select id="slTipoSanguineo" name="tipoSanguineo"><br>
         <option selected>Selecione</option>
         <option value="A">A</option>
         <option value="B">B</option>
@@ -18,13 +18,13 @@
         <option value="O">O</option>
       </select>
       <label for="dataNascimento">Data Nascimento</label>
-      <input id="dataNascimento" type="text" name="dataNascimento" placeholder="dd/MM/yyyy">
+      <input id="dataNascimento" type="text" name="dataNascimento" placeholder="dd/MM/yyyy"><br>
       <label for="alturaCavaleiro">Altura</label>
-      <input id="alturaCavaleiro" type="number" step="0.01" min="0" name="alturaCavaleiro" placeholder="Altura em metros">
+      <input id="alturaCavaleiro" type="number" step="0.01" min="0" name="alturaCavaleiro" placeholder="Altura em metros"><br>
       <label for="peso">Peso</label>
-      <input id="peso" type="number" step="0.01" min="0" name="peso" placeholder="Peso em kg">
+      <input id="peso" type="number" step="0.01" min="0" name="peso" placeholder="Peso em kg"><br>
       <label for="slSigno">Signo</label>
-      <select id="slSigno" name="signo">
+      <select id="slSigno" name="signo"><br>
         <option>Selecione</option>
         <option value="capricornio">Capricórnio</option>
         <option value="aquario">Aquário</option>
@@ -40,11 +40,17 @@
         <option value="sagitario">Sagitário</option>
       </select>
       <label for="localNascimento">Local Nascimento</label>
-      <input id="localNascimento" type="text" name="localNascimento" placeholder="Grécia">
+      <input id="localNascimento" type="text" name="localNascimento" placeholder="Ex: Grécia"><br>
       <label for="localTreinamento">Local Treinamento</label>
-      <input id="localTreinamento" type="text" name="localTreinamento" placeholder="Ilha de Milos, Grécia">
+      <input id="localTreinamento" type="text" name="localTreinamento" placeholder="Ex: Ilha de Milos, Grécia"><br>
+      <label for="golpes">Golpes</label>
+      <input id="golpes" type="text" name="golpes" placeholder="Nome Golpe"><br>
+      <button id="addGolpes" type="button">Adicionar golpe...</button><br>
       <label for="txtUrlImagem">URL Imagem</label>
       <input id="txtUrlImagem" type="text" name="urlImagem" placeholder="Ex: bit.ly/shiryu.png">
+      <label for="isThumb">É thumbnail?</label>
+      <input type="checkbox" id="1" name="isThumb" value="checked"><br>
+      <button id="addImagens" type="button">Adicionar imagens...</button><br>
       <!--<input type="submit" value="Cadastrar!">-->
       <button type="submit">Cadastrar!</button>
     </form>
