--- a/src/modulo-08-java/aula6/crescer-web/src/main/webapp/hello.xhtml
+++ b/src/modulo-08-java/aula6/crescer-web/src/main/webapp/hello.xhtml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <title>Aula 6</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </h:head>
     <h:body>
-        <h:form>
-            <h:panelGrid>
-                <h:outputText id="out" value="#{hello.helloWorld}"/>
-                <h:inputText value="#{hello.helloWorld}"/>
-            </h:panelGrid>
-        </h:form>
+        <ui:composition template="template1.xhtml">
+            <ui:define name="content">
+                <h:form>
+                   <h:panelGrid>
+                       <h:outputText id="out" value="#{hello.helloWorld}" styleClass="form-control" style="border: none; box-shadow: none"/>
+                        <h:inputText value="#{hello.helloWorld}" styleClass="form-control"/>
+                    </h:panelGrid>
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
