--- a/src/modulo-08-java/aula6/crescer-web/src/main/webapp/index.xhtml
+++ b/src/modulo-08-java/aula6/crescer-web/src/main/webapp/index.xhtml
@@ -6,12 +6,18 @@ and open the template in the editor.
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
+        <ui:composition template="template1.xhtml">
+           <ui:define name="content">
+               Olá
+           </ui:define>
+    	</ui:composition>
         <h:form>
             <h:commandLink value="hello" action="hello"/>
         </h:form>
