--- a/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/webapp/pages/pessoa/incluir_pessoa.xhtml
+++ b/src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/src/main/webapp/pages/pessoa/incluir_pessoa.xhtml
@@ -20,7 +20,7 @@
                     <div class="panel-body">
                         <div class="form-group">
                             <h:outputLabel for="nome" value="#{bundle['page.pessoa.name']}"/>
-                            <h:inputText  id="nome" label="#{bundle['page.pessoa.name']}" value="#{pessoaController.entity.nome}" styleClass="form-control" rendered="true"/>
+                            <h:inputText  id="nome" label="#{bundle['page.pessoa.name']}" value="#{pessoaController.entity.nome}" styleClass="form-control" />
                             
                         </div>
                         <div class="form-group">
